--- a/mysite.html
+++ b/mysite.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name=viewport content="width=device-width, initial-scale=1">
-	<title>mysute</title>
+	<title>mysite</title>
 	<link rel="stylesheet" href="mysite.css">
 	<link rel="shortcut icon" href="img/favicon.ico">
 </head>
